--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.1",
@@ -24,6 +23,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "morgan": "^1.10.0",
+    "msg91": "^2.1.4",
     "multer": "^1.4.5-lts.1",
     "node-ccavenue": "^1.0.5",
     "nodemon": "^2.0.20",
