--- a/.env
+++ b/.env
@@ -3,3 +3,15 @@ NODE_ENV=dev
 MSG_AUTHKEY = 405109A1Vgb4zkNnl650fd0aaP1
 
 SMS_TEMPLATE_ID = 650fce66d6fc0533b57eaf83
+
+PHONEPE_KEY = 78ea17c1-7340-4221-a4c0-c70b01007701
+
+MERCHANT_KEY = KREDANGANONLINE
+
+AWS_USER_ACCESS_KEY= AKIAVVGKKUKNNMASN44H
+
+AWS_USER_SECRET_KEY= 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
+
+AWS_REGION= "us-east-1"
+
+AWS_S3_BUCKET_NAME = kredangan
