--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "api": "^6.1.1",
+    "aws-sdk": "^2.1467.0",
+    "axios": "^1.5.1",
     "bcrypt": "^5.1.0",
     "bluebird": "^3.7.2",
+    "bluebird-extra": "^2.0.0",
     "body-parser": "^1.20.1",
     "ccavenue": "^1.0.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
@@ -34,6 +39,7 @@
     "router": "^1.3.7",
     "sha256": "^0.2.0",
     "socket.io": "^4.6.1",
+    "uuid": "^9.0.1",
     "validator": "^13.9.0",
     "validatorjs": "^3.22.1",
     "ws": "^8.13.0"
