--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@ SMS_TEMPLATE_ID = 650fce66d6fc0533b57eaf83
 
 PHONEPE_KEY = 78ea17c1-7340-4221-a4c0-c70b01007701
 
+PHONEPE_MER_ID_DEV = MERCHANTUAT
+
 MERCHANT_KEY = KREDANGANONLINE
 
 AWS_USER_ACCESS_KEY= AKIAVVGKKUKNNMASN44H
