--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ PHONEPE_KEY = 78ea17c1-7340-4221-a4c0-c70b01007701
 
 PHONEPE_MER_ID_DEV = MERCHANTUAT
 
+SALT_KEY_DEV = 099eb0cd-02cf-4e2a-8aca-3e6c6aff0399
+
 MERCHANT_KEY = KREDANGANONLINE
 
 AWS_USER_ACCESS_KEY= AKIAVVGKKUKNNMASN44H
