--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ SMS_TEMPLATE_ID = 650fce66d6fc0533b57eaf83
 
 PHONEPE_KEY = 78ea17c1-7340-4221-a4c0-c70b01007701
 
-PHONEPE_MER_ID_DEV = MERCHANTUAT
+PHONEPE_MER_ID_DEV = PGTESTPAYUAT
 
 SALT_KEY_DEV = 099eb0cd-02cf-4e2a-8aca-3e6c6aff0399
 
-MERCHANT_KEY = KREDANGANONLINE
+MERCHANT_ID = KREDANGANONLINE
 
 AWS_USER_ACCESS_KEY= AKIAVVGKKUKNNMASN44H
 
