--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NODE_ENV=dev
+NODE_ENV=live
 
 MSG_AUTHKEY = 405109A1Vgb4zkNnl650fd0aaP1
 
@@ -19,3 +19,11 @@ AWS_USER_SECRET_KEY= 55kH356ShKMhdJe5A+YuVrZSD2WruVzYqLYu902d
 AWS_REGION= "us-east-1"
 
 AWS_S3_BUCKET_NAME = kredangan
+
+
+
+# live database credintials
+
+MONGOUSERNAME = kredangan
+
+PASSWORD = NPJqz2RpVgoKPyD5
