--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ MSG_AUTHKEY = 405109A1Vgb4zkNnl650fd0aaP1
 
 SMS_TEMPLATE_ID = 650fce66d6fc0533b57eaf83
 
-PHONEPE_KEY = 78ea17c1-7340-4221-a4c0-c70b01007701
+PHONEPE_SALT_KEY = 78ea17c1-7340-4221-a4c0-c70b01007701
 
 PHONEPE_MER_ID_DEV = PGTESTPAYUAT
 
